--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.2.9",
     "expo": "~52.0.43",
     "expo-blur": "~14.0.3",
@@ -26,7 +27,6 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -42,7 +42,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17"
+    "expo-router": "~4.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,6 +52,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
   },
   "private": true
