--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,13 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "moduleResolution": "bundler",  
+    "module": "esnext",
+    "target": "es2016",
+    "jsx": "react-native",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "./*"
