--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-router": "~4.0.20"
+    "expo-router": "~4.0.20",
+    "expo-dev-client": "~5.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
